Fixed paragraph align.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -17,6 +17,7 @@ h2 {
 .down{
   color: aquamarine;
   font-size: 16px;
+  text-align: center;
 }
 
 
@@ -24,6 +25,7 @@ p {
   font-family: Verdana;
   font-size: 21px;
   color: Gray;
+  text-align: center;
 }
 
 .footer {
